--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -107,7 +107,7 @@
     <Compile Include="View\Controls\SlidableListItem.cs" />
     <Compile Include="View\Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="View\Converters\ChangeTypeConverter.cs" />
-    <Compile Include="View\Converters\HexToBrushConverter.cs" />
+    <Compile Include="View\Converters\DoubleToGridLengthConverter.cs" />
     <Compile Include="View\Converters\StringFormatConverter.cs" />
     <Compile Include="View\Converters\ConditionConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -120,27 +120,27 @@
     <Compile Include="Services\ProgressService\ProgressService.cs" />
     <Compile Include="ViewModel\Commands\AsyncRelayCommand.cs" />
     <Compile Include="ViewModel\Controls\FolderListViewModel.cs" />
-    <Compile Include="ViewModel\FlyoutViewModel.cs" />
-    <Compile Include="ViewModel\Flyouts\SettingsViewModel.cs" />
+    <Compile Include="ViewModel\ModalViewModel.cs" />
+    <Compile Include="ViewModel\Modals\SettingsViewModel.cs" />
     <Compile Include="ViewModel\Items\FolderItemViewModel.cs" />
     <Compile Include="ViewModel\PageViewModel.cs" />
     <Compile Include="ViewModel\Items\TodoItemViewModel.cs" />
-    <Compile Include="ViewModel\Flyouts\TodoEditorViewModel.cs" />
+    <Compile Include="ViewModel\Modals\TodoEditorViewModel.cs" />
     <Compile Include="ViewModel\ExtendedViewModel.cs" />
     <Compile Include="ViewModel\SplashScreenMessage.cs" />
     <Compile Include="ViewModel\TodoEventArgs.cs" />
     <Compile Include="View\Controls\FolderListControl.xaml.cs">
       <DependentUpon>FolderListControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\FlyoutBase.cs" />
-    <Compile Include="View\FlyoutTemplateSelector.cs" />
+    <Compile Include="View\ModalBase.cs" />
+    <Compile Include="View\ModalTemplateSelector.cs" />
     <Compile Include="View\Items\FolderTemplateSelector.cs" />
     <Compile Include="View\IView.cs" />
     <Compile Include="View\ExtendedUserControl.cs" />
-    <Compile Include="View\Flyouts\TodoEditor.xaml.cs">
+    <Compile Include="View\Modals\TodoEditor.xaml.cs">
       <DependentUpon>TodoEditor.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Flyouts\SettingsView.xaml.cs">
+    <Compile Include="View\Modals\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Pages\MainPage.xaml.cs">
@@ -186,11 +186,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Flyouts\TodoEditor.xaml">
+    <Page Include="View\Modals\TodoEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Flyouts\SettingsView.xaml">
+    <Page Include="View\Modals\SettingsView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
