--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -5,7 +5,8 @@
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "MvvmLightLibs": "5.3.0"
+    "MvvmLightLibs": "5.3.0",
+    "Win2D.uwp": "1.19.0"
   },
   "frameworks": {
     "uap10.0": {}
