--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -93,6 +93,7 @@
     <None Include="App.config" />
     <None Include="OneDo_StoreKey.pfx" />
     <None Include="project.json" />
+    <PRIResource Include="Strings\en-US\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -101,6 +102,8 @@
     <Compile Include="Common\Event\EntityEventArgs.cs" />
     <Compile Include="Services\ModalService\IModalService.cs" />
     <Compile Include="Services\ModalService\ModalService.cs" />
+    <Compile Include="Services\StringProvider\IStringProvider.cs" />
+    <Compile Include="Services\StringProvider\StringProvider.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\ItemObject.cs" />
     <Compile Include="ViewModel\Items\ColorItemObject.cs" />
@@ -252,6 +255,7 @@
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
