--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Autofac": "4.1.0",
+    "Microsoft.Band": "1.3.20628",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
