--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Services\StringService\StringService.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\IFolderCommands.cs" />
+    <Compile Include="ViewModel\INoteCommands.cs" />
     <Compile Include="ViewModel\ItemObject.cs" />
     <Compile Include="ViewModel\Items\ColorItemObject.cs" />
     <Compile Include="ViewModel\Modals\DebugViewModel.cs" />
