--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -123,6 +123,7 @@
     <Compile Include="ViewModel\Items\ColorItemObject.cs" />
     <Compile Include="ViewModel\Modals\DebugViewModel.cs" />
     <Compile Include="ViewModel\Modals\FolderEditorViewModel.cs" />
+    <Compile Include="ViewModel\Modals\FolderPickerViewModel.cs" />
     <Compile Include="ViewModel\NoteListViewModel.cs" />
     <Compile Include="View\Behaviors\CommandBarBehavior.cs" />
     <Compile Include="View\Behaviors\FlyoutMenuBehavior.cs" />
@@ -166,6 +167,9 @@
     </Compile>
     <Compile Include="View\Modals\FolderEditor.xaml.cs">
       <DependentUpon>FolderEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Modals\FolderPicker.xaml.cs">
+      <DependentUpon>FolderPicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ModalTemplateSelector.cs" />
     <Compile Include="View\Items\FolderTemplateSelector.cs" />
@@ -233,6 +237,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Modals\FolderEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Modals\FolderPicker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
