--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Common\Event\CancelEventArgs.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\UI\TreeHelper.cs" />
+    <Compile Include="View\Controls\CustomCalendarView.cs" />
     <Compile Include="View\Controls\MenuFlyoutIconItem.cs" />
     <Compile Include="View\Controls\ModalContainer.xaml.cs">
       <DependentUpon>ModalContainer.xaml</DependentUpon>
