--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -104,6 +104,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Compile Include="Business\Validation\DateTimeBusiness.cs" />
     <Compile Include="Data\DataService.Data.cs" />
     <None Include="project.json" />
   </ItemGroup>
