--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Data\ObservableStack.cs" />
     <Compile Include="Data\Serialization.cs" />
+    <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="Logging\DebugLogger.cs" />
     <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
