--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -120,6 +120,8 @@
     <Compile Include="Media\ColorHelper.cs" />
     <Compile Include="Metadata\ApiContract.cs" />
     <Compile Include="Metadata\ApiInformationHelper.cs" />
+    <Compile Include="Metadata\DeviceFormFactorType.cs" />
+    <Compile Include="Metadata\DeviceTypeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\OneDo.Common.rd.xml" />
   </ItemGroup>
