--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -104,12 +104,13 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Compile Include="Business\Validation\DateTimeBusiness.cs" />
+    <Compile Include="Business\BusinessBase.cs" />
+    <Compile Include="Business\DateTimeBusiness.cs" />
     <Compile Include="Data\DataService.Data.cs" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Business\BusinessBase.cs" />
+    <Compile Include="Business\DataBusinessBase.cs" />
     <Compile Include="Business\EntityBusiness.cs" />
     <Compile Include="Business\FolderBusiness.cs" />
     <Compile Include="Business\NoteBusiness.cs" />
